[package]
name = "azrs"
version = "0.1.0"
authors = ["Nathan McCrina <nathan.mccrina@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "azrs_lib"

[[bin]]
name = "azrs"

[dependencies]
async-std = "^1.4.0"
async-trait = "^0.1"
base64 = "^0.12"
chrono = "^0.4"
confy = "^0.4"
futures = "^0.3"
hmac = "^0.7"
http-client = "^2.0"
http-types = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
sha2 = "^0.8"
surf = "2.0.0-alpha.1"
url = "^2.0"
